cmake_minimum_required(VERSION 3.16)
project(cpp_learn)

set(CMAKE_CXX_STANDARD 11)

add_executable(unique_ptr unique_ptr.cpp)
add_executable(thread_producer_consumer thread_producer_consumer.cpp)
add_executable(struct_size struct_size.cpp)
add_executable(string8memoryshow string8memoryshow.cpp)
add_executable(reinterpret_cast reinterpret_cast.cpp)
add_executable(reference reference.cpp)
add_executable(realloc realloc.cpp)
add_executable(pointer_array pointer_array.cpp)
add_executable(pointer pointer.cpp)
add_executable(memcpy memcpy.cpp)
add_executable(memory_delete_real memory_delete_real.cpp)
add_executable(iter_ref iter_ref.cpp)
add_executable(explicit explicit.cpp)
add_executable(constructor_copy_assign constructor_copy_assign.cpp)
add_executable(charArray2pointer charArray2pointer.cpp)
add_executable(alignof alignof.cpp)

add_executable(extends_one virtual/extends_one.cpp)
add_executable(condition_variable thread_dir/condition_variable.cpp)
add_executable(redislog log/redislog.cpp)
add_executable(write_flush io/write_flush.cpp)
add_executable(async async/async.cpp)
add_executable(packaged_task async/packaged_task.cpp)
add_executable(promise async/promise.cpp)
