cmake_minimum_required(VERSION 3.16)
project(cpp_primer)

set(CMAKE_CXX_STANDARD 11)

add_subdirectory(ch01)
add_subdirectory(ch03)
add_subdirectory(ch05)
add_subdirectory(ch06)
add_subdirectory(ch07)
add_subdirectory(ch08)
add_subdirectory(ch09)
add_subdirectory(ch10)
add_subdirectory(ch11)
add_subdirectory(ch12)
add_subdirectory(ch13)
add_subdirectory(ch14)
add_subdirectory(ch15)
add_subdirectory(ch16)